fine struttura main

--- a/index.html
+++ b/index.html
@@ -23,8 +23,253 @@
 
         <!-- INIZIO MAIN -->
         <main>
-            <div class="container">
-
+            <div class="participants-gallery">
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                <div class="participant">
+                    <img class="participant-img" src="https://picsum.photos/400/150">
+                    <span class="participant-name">
+                        <i class="fas fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </div>
+                
             </div>
         </main>
         <!-- FINE MAIN -->
