--- a/index.html
+++ b/index.html
@@ -276,8 +276,68 @@
 
         <!-- INIZIO FOOTER -->
         <footer>
-            <div class="container">
+            <!-- Parte sinistra del footer -->
+            <div class="footer-sx">  
+                <button class="icon">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    Mute
+                </button>
+                <button class="icon">
+                    <i class="fas fa-chevron-up"></i>
+                </button>
+                <button class="icon">
+                    <i class="fas fa-video fa-2x"></i>
+                    Stop Video
+                </button>
+                <button class="icon">
+                    <i class="fas fa-chevron-up"></i>
+                </button>
+            </div>
 
+            <!-- parte centrale del footer -->
+            <div class="footer-center">
+                <button class="icon">
+                    <i class="fas fa-user-plus fa-2x"></i>
+                    Invite
+                </button>
+                <button class="icon">
+                    <i class="fas fa-user-friends fa-2x"></i>
+                    Manage Participants
+                </button>
+                <button class="icon">
+                    <i class="fas fa-chart-bar fa-2x"></i>
+                    Polling
+                </button>
+                <button class="icon">
+                    <i class="fas fa-share-square green fa-2x"></i>
+                    Share Screen
+                </button>
+                <button class="icon">
+                    <i class="fas fa-chevron-up"></i>
+                </button>
+                <button class="icon">
+                    <i class="fas fa-comment fa-2x"></i>
+                    Chat
+                </button>
+                <button class="icon">
+                    <i class="fas fa-record-vinyl fa-2x"></i>
+                    Record
+                </button>
+                <button class="icon">
+                    <i class="fas fa-th-large fa-2x"></i>
+                    Breakout Rooms
+                </button>
+                <button class="icon">
+                    <i class="fas fa-ellipsis-h fa-2x"></i>
+                    More
+                </button>
+            </div>
+
+            <!-- parte destra del footer -->
+            <div class="footer-right">
+                <button class="icon special-icon">
+                    End Meeting
+                </button>
             </div>
         </footer>
         <!-- FINE FOOTER -->
